# open-sport-taxonomy

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  schema.yaml
docs/: reference.md  taxonomy.md  translation.md
mappings/: apple_healthkit.yaml  garmin_fit.yaml  garmin_training_api.yaml  polar.yaml  strava.yaml  suunto.yaml  wahoo.yaml
plans/: 001-OPEN-SPORTS-SCHEMA.md  002-REPO-STRUCTURE.md  003-TAXONOMY-DESIGN.md  004-PLATFORM-MAPPINGS.md  005-PYTHON-LIBRARY.md  006-STRING-ENCODING.md  007-FORWARD-COMPATIBILITY.md  008-STANDARD-AND-NON-STANDARD-SPORTS.md  009-RENAME-TO-OPEN-SPORT-TAXONOMY.md  010-SPORT-MATCHING.md  011-PYDANTIC-SPORTFIELD.md  012-CONSTRUCTOR-REDESIGN.md  013-garmin-training-api-mapping.md  014-bidirectional-translation.md  015-stationary-and-virtual-mappings.md  016-python-api-ergonomics.md  017-test-suite-refactor.md  018-wahoo-mapping.md  019-polar-mapping.md  020-suunto-mapping.md  021-cross-platform-mapping-audit.md  022-decouple-encode-from-decode.md  023-decouple-spec-version-from-package-version.md  024-two-version-model.md  025-spec-first-repo-layout.md  026-docs-site-cloudflare-pages.md  027-standard-sports-atoms-labels.md  028-site-standard-sports-browser.md  029-site-filtering-demo.md
python/: CHANGELOG.md  README.md  pyproject.toml
python/scripts/: generate.py
python/src/open_sport_taxonomy/: __init__.py  _platform.py  _platforms.py  _sport.py  pydantic.py
python/tests/: conftest.py
python/tests/algorithm/: test_garmin_fit_code.py  test_loader.py
python/tests/domain/: test_cross_operation.py  test_label.py  test_matching.py  test_parse.py  test_pydantic.py  test_resolve.py  test_sport.py
python/tests/integration/: test_performance.py  test_round_trip.py
python/tests/properties/: conftest.py  test_platform_properties.py  test_sport_properties.py
reference/apple-healthkit/: README.md  targets.yaml  workout_activity_types.yaml
reference/garmin-fit-sdk/: README.md  sports.yaml  sub_sports.yaml  targets.yaml
reference/garmin-training-api/: README.md  targets.yaml
reference/polar/: README.md  detailed_sport_info.yaml  targets.yaml
reference/strava/: README.md  sport_types.yaml  targets.yaml
reference/suunto/: README.md  activities.yaml  targets.yaml
reference/wahoo/: README.md  targets.yaml  workout_types.yaml
scripts/: generate.py  generate_reference.py  lint.py  scaffold.py
scripts/build_reference/: apple_healthkit.py  garmin_fit.py  garmin_training_api.py  polar.py  strava.py  suunto.py  wahoo.py
scripts/templates/: reference.md.jinja
site/: activities.js  filtering.html  index.html  sports.html  taxonomy.js  translate.html  translate.js  xlate-popover.js
src/open_sport_taxonomy/: __init__.py  _modifier.py  _platform.py  _platforms.py  _sport.py  pydantic.py
src/open_sports_schema/: __init__.py  _modifier.py  _platform.py  _platforms.py  _sport.py
tests/: test_bijection.py  test_build_reference.py  test_cross_operation.py  test_decode.py  test_encode.py  test_loader.py  test_matching.py  test_modifier.py  test_parse.py  test_platform_garmin.py  test_platform_garmin_training_api.py  test_platform_healthkit.py  test_platform_strava.py  test_pydantic.py  test_reference_coverage.py  test_resolve.py  test_round_trip.py  test_sport.py  test_validate.py
tests/algorithm/: test_decode.py  test_encode.py  test_garmin_fit_code.py  test_loader.py
tests/domain/: test_cross_operation.py  test_modifier.py  test_resolve.py
tests/integration/: test_build_reference.py  test_performance.py  test_reference_coverage.py  test_round_trip.py
tests/properties/: test_platform_properties.py
tool/: index.html
