[project]
name = "open-sport-taxonomy"
version = "0.4.0"
description = "An open taxonomy for classifying sports and physical activities."
readme = "README.md"
authors = [
    { name = "Aart Goossens", email = "aart@goossens.me" }
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
pydantic = ["pydantic>=2.0"]

[dependency-groups]
dev = ["pytest>=8.0", "pydantic>=2.0", "pyyaml>=6.0"]

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"
